objects/sf_devops__Async_Operation_Result__c.object
<CustomObject>
    <description>Results of any of the asynchronous operations we perform, typically when interacting with the version control system.</description>
    <fields>
        <fullName>sf_devops__Dependent_Records__c</fullName>
        <description>On transition to Completed, attempt to update the records represented as JSON in this field before the transition. If any of those updates fails, set the Async_Operation_Result's Status field to Error.</description>
        <label>Dependent Records</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Error_Details__c</fullName>
        <description>If the operation is in the Error status, then this is the detailed error message.</description>
        <label>Error Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__In_Terminal_State__c</fullName>
        <description>Indicates whether the AOR is in a terminal state (e.g. done)</description>
        <formula>NOT(ISPICKVAL(sf_devops__Status__c, 'In Progress'))</formula>
        <label>In Terminal State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Log_Id__c</fullName>
        <description>Global logging ID to be used cross platform.</description>
        <label>Log Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Message__c</fullName>
        <description>If the operation is In Progress, then this will be a status message.  If the operation is in the Error status, then this is the error message.</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation__c</fullName>
        <description>The operation (commit, promote, etc.) this AOR is monitoring.</description>
        <label>Operation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Commands__c</fullName>
        <description>The list of commands this async operation ran on the remote service</description>
        <label>Remote Commands</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Status__c</fullName>
        <description>The status of this asynchronous operation.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Ignored</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Async Operation Result</label>
    <nameField>
        <displayFormat>AOR-{000000}</displayFormat>
        <label>Async Operation Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Operation Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf_devops__Operation_No_Change</fullName>
        <active>true</active>
        <description>Enforce the operation field cannot be changed.</description>
        <errorConditionFormula>ISCHANGED(sf_devops__Operation__c)</errorConditionFormula>
        <errorMessage>The Operation of an Async_Operation_Result cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>